--- a/src/components/elementUi/elSelect.html
+++ b/src/components/elementUi/elSelect.html
@@ -4,6 +4,19 @@
     <el-option label="Option 1" value="option1"></el-option>
     <el-option label="Option 2" value="option2"></el-option>
     <el-option label="Option 3" value="option3"></el-option>
+    <el-option label="Option 4" value="option1"></el-option>
+    <el-option label="Option 5" value="option2"></el-option>
+    <el-option label="Option 6" value="option3"></el-option>
+    <el-option label="Option 7" value="option1"></el-option>
+    <el-option label="Option 8" value="option2"></el-option>
+    <el-option label="Option 9" value="option3"></el-option>
+    <el-option label="Option 10" value="option1"></el-option>
+    <el-option label="Option 11" value="option2"></el-option>
+    <el-option label="Option 12" value="option3"></el-option>
+    <el-option label="Option 13" value="option1"></el-option>
+    <el-option label="Option 14" value="option2"></el-option>
+    <el-option label="Option 15" value="option3"></el-option>
+
   </el-select>
 
   <!-- Multiple Selection -->
